@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-10T16:21:43Z",
-  "count_outdated" : 507,
-  "uniques_outdated" : 293,
-  "count" : 534,
-  "uniques" : 309,
+  "timestamp" : "2022-09-11T01:45:02Z",
+  "count_outdated" : 510,
+  "uniques_outdated" : 295,
+  "count" : 537,
+  "uniques" : 310,
   "clones" : [
-    {
-      "timestamp": "2022-08-27T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-08-28T00:00:00Z",
       "count": 1,
@@ -91,10 +84,10 @@
     },
     {
       "timestamp": "2022-09-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
