@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-08-27T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-08-28T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2022-09-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
