@@ -1,3 +1,11 @@
+2022-09-11T01:45:02Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3030150601
+* notice: last 14d: unq all: 5 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 293 507 / 309 534
+* notice: next accum: outdated-unq outdated-all / unq all: 295 510 / 310 537
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [2022-08-27] / [2022-09-10]
+
 2022-09-10T16:21:43Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3028639796
 * notice: last 14d: unq all: 5 27
